--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <div class="flex flex-col items-center z-20 md:flex-row">
                     <div class="text-center mb-12 md:text-left md:w-1/2 md:pr-10 justify-center ">
                         <h1 class="title mb-7">Mr. Akshay R Naik</h1>
-                        <p class=" mb-5"> I have 1 year and 7 months of experience in java backend development </p>
-                        <p class="leading-relaxed mb-10"> I have created multiple projects and Rest Api's using java spring boot  </p>
+                        <p class="text-lg mb-5"> I have 1 year and 7 months of experience in java backend development </p>
+                        <p class="leading-relaxed text-lg mb-10"> I have created multiple projects and Rest Api's using java spring boot  </p>
                       <div class="flex justify-center md:justify-start gap-2 mb-2"> <p class="text-color-secondary "> Linkdin: </p> <a href="https://www.linkedin.com/in/akshay-n-929728147/">  <img class="rounded-full h-7 border w-45 hover:scale-90 transition-all duration-300 hover:text-color-secondary " src="./img/linkdin.png" alt=""></a>
                        
                     </div >
